[package]
name = "hero-api"
version = "0.1.0"
authors = ["Louis BEAUMONT <louis.beaumont@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = '0.4.7'
rocket_codegen = "0.4.2"
serde = "1.0.92"
serde_json = "1.0.39"
serde_derive = "1.0.92"
diesel = { version = "1.4.2", features = ["r2d2", "mysql"] }
dotenv = "0.14.1"

[dependencies.rocket_contrib]
version  = "0.4.1"
features = ["json"]

[profile.release]
overflow-checks = true